--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,38 +3,18 @@
     [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <mat-list-item>
-        <mat-icon mat-list-icon>dashboard</mat-icon>
-        <a mat-line routerLinkActive="active" routerLink="/dash">Dashboard</a>
-      </mat-list-item>
-      <mat-list-item>
-        <mat-icon mat-list-icon>drag_indicator</mat-icon>
-        <a mat-line routerLinkActive="active" routerLink="/drag">Drag &amp; Drop</a>
-      </mat-list-item>
-      <mat-list-item>
-        <mat-icon mat-list-icon>dynamic_form</mat-icon>
-        <a mat-line routerLinkActive="active" routerLink="/form">Forms</a>
-      </mat-list-item>
-      <mat-list-item>
-        <mat-icon mat-list-icon>table_view</mat-icon>
-        <a mat-line routerLinkActive="active" routerLink="/tab">Tables</a>
-      </mat-list-item>
-      <mat-list-item>
-        <mat-icon mat-list-icon>account_tree</mat-icon>
-        <a mat-line routerLinkActive="active" routerLink="/tree">Tress</a>
-      </mat-list-item>
-      <mat-list-item>
+      <a mat-list-item routerLinkActive="active" routerLink="/pais">
         <mat-icon mat-list-icon>language</mat-icon>
-        <a mat-line routerLinkActive="active" routerLink="/pais">Pais</a>
-      </mat-list-item>
-      <mat-list-item>
+        <span mat-line>Paises</span>
+      </a>
+      <a mat-list-item routerLinkActive="active" routerLink="/dpto">
         <mat-icon mat-list-icon>language</mat-icon>
-        <a mat-line routerLinkActive="active" routerLink="/dpto">Departamento</a>
-      </mat-list-item>
-      <mat-list-item>
+        <span mat-line>Departamentos</span>
+      </a>
+      <a mat-list-item routerLinkActive="active" routerLink="/ciudad">
         <mat-icon mat-list-icon>language</mat-icon>
-        <a mat-line routerLinkActive="active" routerLink="/ciudad">Ciudad</a>
-      </mat-list-item>
+        <span mat-line>Ciudades</span>
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
