--- a/frontend/src/app/ciudad/ciudad.component.html
+++ b/frontend/src/app/ciudad/ciudad.component.html
@@ -1,10 +1,10 @@
 <div class="grid-container">
     <mat-form-field>
-        <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+        <mat-label>Filtrar</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="" #input>
     </mat-form-field>
     <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort class="full-width-table" aria-label="Elements">
+        <table mat-table [dataSource]="dataSource" matSort class="full-width-table">
             <!-- Codigo Column -->
             <ng-container matColumnDef="codigo">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Codigo</th>
@@ -15,6 +15,16 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
                 <td mat-cell *matCellDef="let row">{{row.nombre}}</td>
             </ng-container>
+            <!-- Dpto Column -->
+            <ng-container matColumnDef="dpto">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Departamento</th>
+                <td mat-cell *matCellDef="let row">{{row.dpto.nombre}}</td>
+            </ng-container>
+            <!-- Pais Column -->
+            <ng-container matColumnDef="pais">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Pais</th>
+                <td mat-cell *matCellDef="let row">{{row.dpto.pais.nombre}}</td>
+            </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             <!-- Row shown when there is no matching data. -->
@@ -22,7 +32,6 @@
                 <td class="mat-cell" colspan="2">No data matching the filter "{{input.value}}"</td>
             </tr>
         </table>
-        <mat-paginator [pageSizeOptions]="[25, 50, 100, 250]">
-        </mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
     </div>
 </div>
