--- a/frontend/src/app/pais/pais.component.html
+++ b/frontend/src/app/pais/pais.component.html
@@ -1,7 +1,10 @@
 <div class="grid-container">
+    <mat-form-field>
+        <mat-label>Filtrar</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="" #input>
+    </mat-form-field>
     <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="data" mat-table class="full-width-table" aria-label="Elements" matSort
-            matSortActive="codigo" matSortDisableClear matSortDirection="asc">
+        <table mat-table [dataSource]="dataSource" matSort class="full-width-table">
             <!-- Codigo Column -->
             <ng-container matColumnDef="codigo">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Codigo</th>
@@ -14,9 +17,11 @@
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="2">No data matching the filter "{{input.value}}"</td>
+            </tr>
         </table>
-        <mat-paginator #paginator [length]="data?.length" [pageIndex]="0" [pageSize]="50"
-            [pageSizeOptions]="[25, 50, 100, 250]">
-        </mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
     </div>
 </div>
