--- a/frontend/src/app/geographic/pais/pais.component.html
+++ b/frontend/src/app/geographic/pais/pais.component.html
@@ -25,7 +25,7 @@
           <button mat-mini-fab color="accent" aria-label="Editar Registro" (click)="openEditDialog(row)">
             <mat-icon>edit</mat-icon>
           </button>
-          <button mat-mini-fab color="warn" aria-label="Eliminar Registro">
+          <button mat-mini-fab color="warn" aria-label="Eliminar Registro" (click)="openDeleteDialog(row)">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
