Implementacion de CRUD para Dpto y Ciudad. Creacion de documentacion TypeSCript

--- a/frontend/src/app/geographic/ciudad-dialog/ciudad-dialog.component.html
+++ b/frontend/src/app/geographic/ciudad-dialog/ciudad-dialog.component.html
@@ -1,1 +1,69 @@
-<p>ciudad-dialog works!</p>
+<form [formGroup]="mainForm" novalidate (ngSubmit)="onSubmit()">
+    <mat-card class="main-card">
+        <mat-card-header>
+            <mat-card-title>Ciudad</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <div class="row">
+                <div class="col">
+                    <mat-form-field class="full-width">
+                        <input matInput placeholder="Codigo" formControlName="codigo">
+                        <mat-error *ngIf="mainForm.controls['codigo'].hasError('required')">
+                            Codigo es <strong>Requerido</strong>
+                        </mat-error>
+                        <mat-error *ngIf="mainForm.controls['codigo'].hasError('minlength')">
+                            Codigo no puede ser inferior a <strong>2 Caracteres</strong>
+                        </mat-error>
+                        <mat-error *ngIf="mainForm.controls['codigo'].hasError('maxlength')">
+                            Codigo no puede ser superior a <strong>2 Caracteres</strong>
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+                <div class="col">
+                    <mat-form-field class="full-width">
+                        <input matInput placeholder="Nombre" formControlName="nombre">
+                        <mat-error *ngIf="mainForm.controls['nombre'].hasError('required')">
+                            Nombre es <strong>Requerido</strong>
+                        </mat-error>
+                        <mat-error *ngIf="mainForm.controls['codigo'].hasError('minlength')">
+                            Nombre no puede ser inferior a <strong>2 Caracteres</strong>
+                        </mat-error>
+                        <mat-error *ngIf="mainForm.controls['codigo'].hasError('maxlength')">
+                            Nombre no puede ser superior a <strong>2 Caracteres</strong>
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <mat-form-field class="full-width">
+                        <mat-select placeholder="Pais" formControlName="pais">
+                            <mat-option (onSelectionChange)="changePais($event)" *ngFor="let pais of paises" [value]="pais.codigo">
+                                {{ pais.nombre }}
+                            </mat-option>
+                        </mat-select>
+                        <mat-error *ngIf="mainForm.controls['pais'].hasError('required')">
+                            Pais es <strong>Requerido</strong>
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+                <div class="col">
+                    <mat-form-field class="full-width">
+                        <mat-select placeholder="Departamento" formControlName="dpto">
+                            <mat-option *ngFor="let dpto of dptos" [value]="dpto.codigo">
+                                {{ dpto.nombre }}
+                            </mat-option>
+                        </mat-select>
+                        <mat-error *ngIf="mainForm.controls['pais'].hasError('required')">
+                            Departamento es <strong>Requerido</strong>
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+            </div>
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-raised-button color="primary" *ngIf="mainForm.status === 'VALID'" type="submit">Guardar</button>
+            <button mat-raised-button color="warn" type="button" (click)="close()">Cancelar</button>
+        </mat-card-actions>
+    </mat-card>
+</form>
