--- a/frontend/src/app/geographic/ciudad/ciudad.component.html
+++ b/frontend/src/app/geographic/ciudad/ciudad.component.html
@@ -25,6 +25,21 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Pais</th>
                 <td mat-cell *matCellDef="let row">{{row.dpto.pais.nombre}}</td>
             </ng-container>
+            <!-- Acciones Column -->
+            <ng-container matColumnDef="accion">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Acciones</th>
+                <td mat-cell *matCellDef="let row">
+                    <button mat-mini-fab color="primary" aria-label="Adicionar Registro" (click)="openNewDialog()">
+                        <mat-icon>add</mat-icon>
+                    </button>
+                    <button mat-mini-fab color="accent" aria-label="Editar Registro" (click)="openEditDialog(row)">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+                    <button mat-mini-fab color="warn" aria-label="Eliminar Registro" (click)="openDeleteDialog(row)">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             <!-- Row shown when there is no matching data. -->
